@@ -10,12 +10,12 @@ ruri [参数]... [容器目录]... [命令 [参数]...]
 -V, --version-code ..........................: 显示版本代码
 -h, --help ..................................: 显示帮助
 -H, --show-examples .........................: 显示命令行示例
--P, --ps [container_dir].....................: 显示容器进程信息
+-P, --ps [container_dir/config]..............: 显示容器进程信息
 ```
 这四个选项将显示相关信息。
 ********************************************
 ```
--U, --umount [container_dir] ................: 卸载容器
+-U, --umount [container_dir/config] .........: 卸载容器
 ```
 在运行容器时，ruri需要挂载一些目录。  
 在运行完容器后，可以使用`-U`选项来卸载容器。  
