@@ -9,6 +9,7 @@
   * Add `-x` option: `--disable-network`.
   * Add `-C` option: `--correct-config`
   * `-c` option can now recognize other args and command to run.
+  * `-U` and `-P` option can now use config file.
   * Rewrite cgroup support, add cpupercent limit support.
   * Change MAX_MOUNTPOINTS AND MAX_ENVS from 128*2 to 512*2.
   * Auto kill all processes in container when umounting container.
